Ajuste frontend (contenedores, franjas horarias, gráfico)

--- a/src/main/resources/templates/PaginaBienvenidaBootstrap.html
+++ b/src/main/resources/templates/PaginaBienvenidaBootstrap.html
@@ -91,7 +91,7 @@
                     <img src="img/foto4.jpg" alt="..." style="width:1550px;height: 550px">
                     <div class="carousel-caption" style="margin-bottom: 5%">
                         <h3 style="font-size: 50px;color: white">Pregunta a resolver</h3>
-                        <p style="font-size: 35px;color: white">¿Existe una (o más) franja(s) horaria donde el valor de
+                        <p style="font-size: 35px;color: white">¿Existe una (o más) franja(s) horaria(s) donde el valor de
                             la concentración de contaminación supere un valor determinado?</p>
                     </div>
                 </div>
